--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "mythusai",
-  "productName": "mythusai",
+  "name": "mythusai-web",
+  "productName": "MythusAI Web",
   "version": "1.0.0",
-  "description": "Professional screenplay production management",
-  "main": ".vite/build/main.js",
+  "description": "Professional screenplay production management - Web Application",
+  "type": "module",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
-  "keywords": [],
+  "keywords": ["screenplay", "production", "management", "react", "typescript"],
   "author": {
     "name": "Dineshwar",
     "email": "133356394+dinonomous@users.noreply.github.com"
   },
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^7.9.0",
-    "@electron-forge/maker-deb": "^7.9.0",
-    "@electron-forge/maker-rpm": "^7.9.0",
-    "@electron-forge/maker-squirrel": "^7.9.0",
-    "@electron-forge/maker-zip": "^7.9.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
-    "@electron-forge/plugin-fuses": "^7.9.0",
-    "@electron-forge/plugin-vite": "^7.9.0",
-    "@electron/fuses": "^1.8.0",
     "@types/node": "^24.6.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/react-dropzone": "^4.2.2",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
-    "electron": "38.2.1",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
@@ -43,11 +38,8 @@
     "@headlessui/react": "^2.2.9",
     "@radix-ui/react-progress": "^1.1.7",
     "@tanstack/react-table": "^8.21.3",
-    "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-store": "^11.0.0",
     "framer-motion": "^12.23.22",
     "handsontable": "^16.1.1",
     "html2canvas": "^1.4.1",
