--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
 
     /* Path aliases (for your imports) */
@@ -29,4 +29,5 @@
     }
   },
   "include": ["src"],
+  "exclude": ["src/app", "src/main"]
 }
